Low On Caffeine, Please Forgive Coding Style

--- a/Skript.tex
+++ b/Skript.tex
@@ -2164,7 +2164,7 @@ $\Rightarrow$ Wir brauchen einen Takt!
 \end{Hint}
 
 \subsection{Taktsteuerung}
-\subsubsection{\ac{TPS}}
+\subsubsection{\acf{TPS}}
 \begin{itemize}
 	\vspace*{-0.5em}
 	\itemsep 0em
@@ -2172,7 +2172,7 @@ $\Rightarrow$ Wir brauchen einen Takt!
 	\item\textbf{negative \ac{TPS}:} Der Takt ist aktiv, solange der Takt den Pegel \glqq 0\grqq{} hat.
 \end{itemize}
 
-\subsubsection{\ac{TFS}}
+\subsubsection{\acf{TFS}}
 \begin{itemize}
 	\vspace*{-0.5em}
 	\itemsep 0em
