--- a/Skript.tex
+++ b/Skript.tex
@@ -2424,6 +2424,112 @@ Was passiert bei $ J=K=1 $? Das JK-FF wechselt seinen Zustand (es \glqq toggelt\
 	\item[] JK-FF mit \ac{TFS}: FF toggelt, wenn $ J=K=1 $ und akt. TF! und außerdem genau 1x! (\textbf{Achtung:} bei \glqq TFS für Arme\grqq{} kann das nicht sichergestellt werden!)
 \end{itemize}
 
+\subsubsection{T-FlipFlop (Toggle)}
+$\Rightarrow$ Besitzt nur einen Takteingang\\
+$\Rightarrow$ Nur mit \ac{TFS}, da es bei aktiver TF genau 1x toggelt.\\
+\\
+\textbf{Realisierung:}\\
+\begin{minipage}{0.4\textwidth}
+	\centering
+	\begin{circuitikz}
+	\tikzset{flipflop JK/.style={flipflop,
+		flipflop def={t1=K,t3=J,t4=Q,c2=1, t2={\texttt{T}}},
+	}}
+	\draw node[flipflop JK](JK){}
+	(JK.pin 1) to[short] ++(-0.5,0) coordinate (e1)
+	(JK.pin 3) to[short] ++(-0.5,0) coordinate (e2)
+	(JK.pin 2) to[short] ++(-2,0) coordinate (et)
+	(e1) node[anchor=east]{\glqq 1\grqq}
+		(e2) node[anchor=east]{\glqq 1\grqq}
+	(et) node[anchor=east]{T}
+	;
+\end{circuitikz}
+\end{minipage}
+oder
+\begin{minipage}{0.4\textwidth}
+	\centering
+\begin{circuitikz}
+	\tikzset{flipflop JK/.style={flipflop,
+			flipflop def={t3=D,t6=Q,t4={Q*},c2=1,t2={\texttt{T}}},
+	}}
+	\draw node[flipflop JK](JK){}
+	(JK.pin 2) to[short] ++(-2,0) coordinate (et)
+	(JK.pin 3) to[short] ++(0,-0.75) coordinate(p)
+	(JK.pin 4) to[short] ++(2,0) coordinate (p1)
+	(p) -| (JK.pin 4)
+	(et) node[anchor=east]{T}
+	(p1) node[anchor=west]{Q}
+	;
+\end{circuitikz}
+\end{minipage}
+\\
+\vspace*{2em}
+
+\begin{figure}[h!]
+	\centering
+	\begin{circuitikz}
+	\tikzset{flipflop T/.style={flipflop,
+			flipflop def={t4=Q,c2=1,t2={\texttt{T}}},
+	}}
+	\draw node[flipflop T](T){}
+	(T.pin 2) to[short] ++(-2,0) coordinate (et)
+	(T.pin 4) to[short] ++(2,0) coordinate (p1)
+	(et) node[anchor=east]{T}
+	(p1) node[anchor=west]{Q}
+	;
+\end{circuitikz}
+\begin{tikztimingtable}[timing/slope=0, scale=5]
+	T     	& LHLHLHL\\
+	Q 	   & LHHLLHH\\
+\end{tikztimingtable}
+\caption{Verhalten eines T-FlipFlops}
+\end{figure}
+
+\noindent
+$\Rightarrow$Frequenzalbierer\\
+$\Rightarrow$(Licht-)Schalter, welcher bei jeder Betätigung umgeschaltet wird.
+
+\begin{center}
+	\begin{circuitikz}
+	\tikzset{flipflop T/.style={flipflop,
+			flipflop def={t4=Q,c2=1,t2={\texttt{T}}},
+	}}
+	\draw
+	node[flipflop T](T1){}
+	node[flipflop T, right=1cm of T1](T2){}
+	node[flipflop T, right=1cm of T2](T3){}
+	(T1.pin 4) |- (T2.pin 2)
+	(T2.pin 4) |- (T3.pin 2)
+	(T1.pin 2) node[anchor=east] {$ T $}
+	(T1.pin 4) node[anchor=north] {$ Q_0 $}
+	(T2.pin 4) node[anchor=north] {$ Q_1 $}
+	(T3.pin 4) node[anchor=north] {$ Q_2 $}
+	;
+\end{circuitikz}
+\end{center}
+\begin{center}
+	\begin{tabular}{ccccccccr}
+		T & $ Q_0 $ & $ Q_1 $ & $ Q_2 $ &  & $ Q_2 $ & $ Q_1 $ & $ Q_0 $ & \\
+		0 & 0 & 0 & 0 &  & 0 & 0 & 0 & \\
+		1 & 1 & 1 & 1 &  & 1 & 1 & 1 & 7\\
+		0 & 1 &  & 1 &  &  &  &  & \\
+		1 & 0 & 1 & 1 &  & 1 & 1 & 0 & 6\\
+		0 & 0 & 1 & 1 &  &  &  &  & \\
+		1 & 1 & 0 & 1 &  & 1 & 0 & 1 & 5\\
+		0 & 1 & 0 & 1 &  &  &  &  & \\
+		1 & 0 & 0 & 1 &  & 1 & 0 & 0 & 4\\
+		0 & 0 & 0 & 1 &  &  &  &  & \\
+		1 & 1 & 1 & 0 &  & 0 & 1 & 1 & 3\\
+		0 & 1 & 1 & 0 &  &  &  &  & \\
+	\end{tabular}
+\\
+$\Rightarrow$ Rückwärtszähler\\
+$\Rightarrow$ Vorwärtszähler bei Invertierung zwischen Q und T
+\end{center}
+
+
+
+
 \newpage
 \section*{Abkürzungsverzeichnis}
 \begin{acronym}[Bash]
